test/Protocols/CircularConformance.dot

// VERIFY

protocol P1 with P2 {} // expected-error {{protocol 'P1' cannot conform to itself}}
// expected-note@-1 {{conformance chain: P1 -> P2 -> P3 -> P1}}
protocol P2 with P3 {} // expected-error {{protocol 'P2' cannot conform to itself}}
// expected-note@-1 {{conformance chain: P2 -> P3 -> P1 -> P2}}
protocol P3 with P1 {} // expected-error {{protocol 'P3' cannot conform to itself}}
// expected-note@-1 {{conformance chain: P3 -> P1 -> P2 -> P3}}